RESOLVED FIXED151199
WK2 iOS interaction tests in LayoutTests/fast/events/ios are flaky
https://bugs.webkit.org/show_bug.cgi?id=151199
Summary WK2 iOS interaction tests in LayoutTests/fast/events/ios are flaky
Wenson Hsieh
Reported 2015-11-12 10:15:22 PST
When running iOS interaction tests using UIScriptController, we time out in rare cases.
Attachments
Patch (1.59 KB, patch)
2015-11-12 12:37 PST, Wenson Hsieh
no flags
Patch (2.98 KB, patch)
2015-11-13 15:54 PST, Wenson Hsieh
thorton: review+
Wenson Hsieh
Comment 1 2015-11-12 10:15:44 PST
This happens because touches may occasionally hit-test to the UIStatusBarWindow instead of WebKitTestRunnerWindow, causing WebKit's gesture recognizers to never fire. This can be easily fixed by disabling user interaction for the UIStatusBarWindow when launching WKTR.
Wenson Hsieh
Comment 2 2015-11-12 12:31:11 PST
Wenson Hsieh
Comment 3 2015-11-12 12:37:02 PST
Wenson Hsieh
Comment 4 2015-11-13 15:54:46 PST
Tim Horton
Comment 5 2015-11-13 15:59:43 PST
Comment on attachment 265509 [details] Patch Furrrrrrther. I think it should be all the way at the bottom of this function.
Wenson Hsieh
Comment 6 2015-11-13 16:05:03 PST
Note You need to log in before you can comment on or make changes to this bug.